<resources>
    <string name="app_name">Calculator</string>
    <string name="btn2">2</string>
    <string name="ac">AC</string>
    <string name="btn1">1</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>

    <string name="sample">0</string>

    <string name="equal">equal</string>
    <string name="add">add</string>
    <string name="minus">minus</string>
    <string name="multiply">multiply</string>
    <string name="divide">divide</string>
    <string name="percentage">percentage</string>
    <string name="backspace">backspace</string>
    <string name="dot">dot</string>

    <string name="equalbtn">=</string>
    <string name="addbtn">+</string>
    <string name="minusbtn">-</string>
    <string name="multiplybtn">*</string>
    <string name="dividebtn">/</string>
    <string name="percentagebtn">%</string>
    <string name="backspacebtn">""</string>
    <string name="dotbnt">.</string>






</resources>